# qss

./: .gitignore  LICENSE  README.md  matrix_util.py  proximal.py  pyproject.toml  qss.py  requirements.txt  setup.py  test.py  util.py
.github/workflows/: build-test.yml  build.yml  main-test.yml  test.yml
conda_recipe/: meta.yaml  recipe.yaml
notebooks/: fix_nonconvex.ipynb  test_block_rho.ipynb
notebooks/paper/: examples.ipynb
qss/: __init__.py  _version.py  admm.py  descent.py  linearoperator.py  matrix.py  polish.py  precondition.py  proximal.py  qss.py  util.py
tests/: README.md  conftest.py  test.py  test_big.py  test_input.py  test_linearoperator.py  test_proximal.py  test_small.py  testutil.py
