[build-system]
requires = ["setuptools>=64.0", "setuptools-scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "qss"
description = "QSS: Quadratic-Separable Solver"
readme = "README.md"
license.file = "LICENSE"
authors = [
  { name = "Luke Volpatti", email = "bennetm@stanford.edu" },
]
maintainers = [
  { name = "Sara Miskovich", email = "smiskov@slac.stanford.edu" },
]
requires-python = ">=3.6"

dependencies = [
    "scipy",
    "numpy",
    "cvxpy",
    "qdldl",
    "matplotlib"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]
dynamic = ["version"]
[tool.setuptools_scm]
write_to = "qss/_version.py"

[tool.setuptools.packages.find]
include = ["qss*"]

[project.urls]
Homepage = "https://github.com/cvxgrp/qss"
"Bug Tracker" = "https://github.com/cvxgrp/qss/issues"
